# LangGraph-Multiagent

./: .gitignore  pyproject.toml  requirements.txt
app/: conditional_edges.py  langgraph_runner.py  main.py
app/agents/: general_orchestrator_agent.py  initent_classification_agent.py  parser_agent.py  product_aggregator_agent.py  product_orchestrator_agent.py  query_verification_node.py  scrape_agent.py  search_agent.py  spreadsheet_agent.py
app/core/: config.py  llm.py  logging_config.py  sheet_mcp.json  tesseract_config.py
app/state/: main_graph_state.py  product_subgraph_state.py  scrape_subgraph_state.py
app/templates/: index.html  interrupt.html  products.html
app/tools/: google_search_tool.py  scraper_tool.py  spreadsheet_tool.py
app/tools/extractors/: docs.py  excel.py  image.py  pdf.py
app/workflow/: main_workflow.py  product_subgraph_workflow.py  scrape_subgraph_workflow.py
